# hawk

./: .gitignore  README.md
.github/: README.md
script/: compile_run.sh  script.sh
src/: CMakeLists.txt
src/CMake/: FindKernelHeaders.cmake  Findbpf.cmake
src/include/: exec_monitor.h  process_info.h  process_info.hpp
src/kern/: exec.c
src/kernelspace/: exec_monitor.c
src/main/: config.cpp  config.h  config.hpp  main.cpp
src/user/: user.c
src/userspace/: exec_monitor.c  exec_monitor.cpp  exec_monitor.hpp  monitor.hpp
